# bitburner-oxide

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
src/: app_args.rs  bitburner.rs  cli.yaml  config.rs  handler.rs  lib.rs  main.rs
src/bitburner/: message.rs  operation.rs
src/websocket/: client.rs
