[package]
name = "bitburner-oxide"
version = "0.1.15"
authors = ["Chris Dawkins"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["cargo", "derive"]}
reqwest = { version = "0.11.9", features = ["blocking"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
notify = "4.0.17"
base64 = "0.13.0"
log = "0.4.0"
env_logger = "0.9.0"
anyhow = "1.0"
once_cell = "1.12"

[dev-dependencies]
mockito = "0.30.0"
